--- a/Case0_CSS_Ani_Vari/basic.css
+++ b/Case0_CSS_Ani_Vari/basic.css
@@ -43,6 +43,9 @@ div.grid2 {
 
 div.grid3 {
 	background-color: blue;
+	animation-name: ani_grid3;
+	animation-duration: 2s;
+	position: relative;
 }
 
 div.grid4 {
@@ -62,6 +65,13 @@ div.grid4 {
 	60% {background-color: red;}
 	80% {background-color: blue;}
 	100% {background-color: green;}
+}
+
+@keyframes ani_grid3 {
+	0% {left: 0px; top: 0px;}
+	50%{left: 100px;top: 0px;}
+	100%{left: 0px;top: 0px;}
+
 }
 
 .fas {
